--- a/views/assistance.ejs
+++ b/views/assistance.ejs
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="ai_assistance.css">
 </head>
 <body>    
-    <a href="/" class="home-link">Home</a>
     <header>
-        <div class="navbar">
-        </div>
+        <nav class="navbar">
+            <a href="/" class="nav-link">Home</a>
+            <a href="hospitalfinder.html" class="nav-link">Hospitals</a>
+            <a href="pharmacies.html" class="nav-link">Pharmacies</a>
+            <a href="bloodbanks.html" class="nav-link">Blood Banks</a>
+            <a href="ambulancefinder.html" class="nav-link">Ambulances</a>
+        </nav>
         <h1>AI Assistance - FirstAidNet</h1>
         <p>Ask about symptoms, health advice, or find emergency services.</p>
     </header>
@@ -26,6 +30,6 @@
         </section>
     </main>
 
-    <script src="/ai_assistance.js"></script>
+    <script src="ai_assistance.js"></script>
 </body>
 </html>
