--- a/public/ai_assistance.css
+++ b/public/ai_assistance.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   background: url('./bg.jpg') no-repeat center center fixed;
   background-size: cover;
+  color : white;
   text-align: center;
 }
 
