--- a/views/assistance.ejs
+++ b/views/assistance.ejs
@@ -9,9 +9,8 @@
 <body>    
     <header>
         <nav class="navbar">
-            <div class="nav-left">
+            <div class="nav-right">
                 <a href="/" class="nav-link">Home</a>
-                <a href="/awareness" class="nav-link">First Aid Guide</a>
                 <a href="mailto:chaitanyadeepikap@gmail.com" class="nav-link">Contact Us</a>
             </div>
         </nav>
