--- a/views/awareness.ejs
+++ b/views/awareness.ejs
@@ -12,7 +12,7 @@
             <div class="logo">FirstAidNet</div>
             <div class="nav-links">
                 <a href="/">Home</a>
-                <a href="#contact">Contact Us</a>
+                <a href="mailto : chaitanyadeepikap@mail.com">Contact Us</a>
             </div>            
         </div>
     </header>
