--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirstAidNet</title>
-    <link rel="stylesheet" href="donate.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -63,6 +63,6 @@
             </div>
         </div>
     </footer>
-    <script src="donate.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
