--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
             <div class="nav-links">
                 <a href="/awareness">First Aid Guide</a> <!-- Awareness link -->
                 <a href="/assistance">AI Assistance</a> <!-- Assistance page link -->
-                <a href="/donate">Donate</a>
+                <a href="/donate">Donation Forms</a>
                 <a href="mailto:chaitanyadeepikap@gmail.com">Contact Us</a>
             </div>
         </div>
